# ancIBD

./: .gitignore  .nfs0000000dcae6d6f100000919  .readthedocs.yaml  README.md  fig4d.csv  sourcedata_fig4d.ipynb
cluster/extract_subsamples/: batchfile.sh
cluster/prep_hdf5_ali/: batchfile.sh  vcf_to_hdf5.py  vcf_to_hdf5.v49.2.py  vcf_to_hdf5.v51.1.py  vcf_to_hdf5.v53.1.py  vcf_to_hdf5.v54.1.py  vcf_to_hdf5.v56.3.py
docs/: FAQ.rst  Install.rst  Intro.rst  ancIBD2.ipynb  ancIBDX.ipynb  ch_all.tsv  conf.py  create_hdf5_from_vcf.ipynb  faq.rst  ibd_ind.tsv  index.rst  plot_IBD.ipynb  qs_output1.txt  qs_output2.txt  quick_start.ipynb  quick_start_bash.rst  quick_start_sampleAlleleFreq.ipynb  requirements.txt  run_ancIBD.ipynb
docs/test/: ch1.tsv  ch10.tsv  ch11.tsv  (+23 more)
notebook/: run_pair_IBD.ipynb
package/: README.md  change_log.md  legacy_README.md  pyproject.toml  setup.py  upload_instructions.md
package/ancIBD/: .nfs0000000016bbe81b00001dfe  ancIBD.py  ancIBD_summary.py  cfunc.html  cfunc.pyx  emission.py  hmm.py  loaddata.py  main.py  postprocessing.py  run.py  run_ancIBD.py  run_ancIBDX.py  transition.py
package/ancIBD/IO/: batch_run.py  h5_duplicates.py  h5_load.py  h5_modify.py  h5_qc.py  ind_ibd.py  prepare_h5.py
package/ancIBD/ibd_stats/: estimate_Ne.py  funcs.py  ibd_sites_stats.py
package/ancIBD/plot/: plot_df.py  plot_karyotype.py  plot_opphomos.py  plot_posterior.py
package/hapBLOCK/IO/: h5_load.py
python3/: DEPRECATED_WARNING.md  cfunc.c  cfunc.html  cfunc.pyx  emission.py  hmm.py  loaddata.py  main.py  postprocessing.py  run.py  transition.py
(+115 files in other folders)
